# inpaintgimpplugin

./: AUTHORS  CNAME  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  example_new_orleans.html  example_pumpkin.html  index.html  intltool-extract.in  intltool-merge.in  intltool-update.in  macosx-bindist.sh  macosx-makezip.sh  params.json  win32-bindist.sh  win32-makezip.sh
example/: batch_script.scm  williamsburg_bridge_mask.xcf
help/: Makefile.am  Makefile.in
help/en/: Makefile.am  Makefile.in  doc.html  gimp-help.xml  index.html
help/en/stylesheets/: Makefile.am  Makefile.in  stylesheet.css
help/images/: Makefile.am  Makefile.in
m4/: gimp-plugin-directories.m4
po/: ChangeLog  POTFILES.in  az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  gimp20-plugin-template.pot  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
src/: Heap.cpp  Heap.h  Makefile.am  Makefile.in  inpainting_func.cpp  inpainting_func.h  inpaintpi.c.old  interface.c  interface.h  main.c  main.h  render.cpp  render.h
stylesheets/: stylesheet.css
