## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS = -I m4 -I build-aux
SUBDIRS = po src help

EXTRA_DIST = \
	BUGS			\
	HACKING			\
	autogen.sh		\
    intltool-extract.in	\
    intltool-merge.in	\
    intltool-update.in  \
	macosx-bindist.sh       \
	macosx-makezip.sh       \
	win32-bindist.sh        \
	win32-makezip.sh

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
